add a little style and add my  phrase-base

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 </head>
 
 <body>
-
-    <div class="main">
-        <div class="output_en" id="google_translate_element"></div>
-        <button id="btnCheckWord">Проверить</button>
-        <button id="btnNewWord" data-google-lang="ru">Новое слово</button>
-        <input id='input' type="text" readonly='readonly' class="input-text" />
-
-
+    <div class="container">
+        <div class="main">
+            <div class="output_en"></div>
+            <button class="main__btn" id="btnCheckWord">Проверить</button>
+            <button class="main__btn" id="btnNewWord">Новое слово</button>
+            <input id='input' type="text" readonly='readonly' class="input-text" />
+        </div>
     </div>
+
 
 
     <script src="./js/main.js" type="module"></script>
